kubernetes/system/rook-ceph/base/httproutes.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: httproute-external-rook-ceph
  namespace: rook-ceph
spec:
  parentRefs:
  - name: external-gateway
    namespace: kube-system
  hostnames:
    - "rook.ninebasetwo.net"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: rook-ceph-mgr-dashboard
      port: 8443
