kubernetes/system/rook-ceph/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-external-ceph
  namespace: rook-ceph
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: ninebasetwo.net
    external-dns.alpha.kubernetes.io/target: ceph.ninebasetwo.net
    nginx.ingress.kubernetes.io/auth-url: "https://oauth2.ninebasetwo.net/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://oauth2.ninebasetwo.net/oauth2/start?rd=$scheme://$host$request_uri"
spec:
  ingressClassName: nginx 
  rules:
  - host: ceph.ninebasetwo.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rook-ceph-mgr-dashboard
            port:
              number: 8443
  tls:
  - hosts:
    - ceph.ninebasetwo.net
    secretName: argocd-tls
